# triback

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.prod.yml  docker-compose.vol-mount.yml  docker-compose.yml  env.dev  env.prod.example
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 42fa92c6dc7c_001_initial_schema.py  a1b2c3d4e5f6_002_doctor_slug_not_null.py  b3c4d5e6f7a8_003_add_onboarding_submitted_at.py  c4d5e6f7a8b9_004_moneta_integration.py  d5e6f7a8b9c0_005_payment_expires_at.py  e6f7a8b9c0d1_006_certificate_settings.py  f7g8h9i0j1k2_007_telegram_integrations.py  g8h9i0j1k2l3_008_add_board_role.py  h9i0j1k2l3m4_009_payment_webhook_inbox.py  i0j1k2l3m4n5_010_doctor_specialization_text.py  j1k2l3m4n5o6_011_membership_arrears.py  k1l2m3n4o5p6_012_protocol_history_entries.py  l2m3n4o5p6q7_013_media_assets.py  m3n4o5p6q7r8_014_faq_entries.py  n4o5p6q7r8s9_015_normalize_email_lower.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  arrears_admin.py  auth.py  certificates.py  certificates_admin.py  colleagues.py  content_admin.py  content_blocks_admin.py  dashboard.py  doctors_admin.py  events_admin.py  exports.py  faq_admin.py  media_admin.py  notifications_admin.py  onboarding.py  payments_admin.py  profile.py  protocol_history_admin.py  public.py  seo_admin.py  settings_admin.py  subscriptions.py  telegram.py  telegram_admin.py  users_admin.py  voting.py  webhooks.py
backend/app/api/v1/public/: __init__.py  cities.py  (+8 more)
backend/app/core/: admin_filters.py  config.py  database.py  dependencies.py  encryption.py  enums.py  exceptions.py  logging.py  logging_privacy.py  openapi.py  pagination.py  permissions.py  rate_limit.py  redis.py  security.py  security_headers.py  utils.py
backend/app/models/: __init__.py  arrears.py  base.py  certificate_settings.py  certificates.py  cities.py  content.py  events.py  faq.py  media_asset.py  payment_webhook_inbox.py  profiles.py  protocol_history.py  site.py  subscriptions.py  telegram_integration.py  users.py  voting.py
backend/app/schemas/: __init__.py  arrears.py  auth.py  certificate_settings.py  certificates.py  content_admin.py  content_blocks.py  doctor_admin.py  event_registration.py  events_admin.py  faq.py  media_admin.py  notifications.py  onboarding.py  payments.py  profile.py  protocol_history.py  public.py  seo.py  settings_admin.py  shared.py  subscriptions.py  telegram.py  telegram_admin.py  users_admin.py  voting.py
backend/app/services/: arrears_admin_service.py  article_public_service.py  auth_service.py  certificate_service.py  certificate_settings_service.py  city_public_service.py  content_block_service.py  content_service.py  doctor_catalog_service.py  doctor_communication_service.py  doctor_crud_service.py  doctor_import_service.py  doctor_moderation_service.py  doctor_service.py  email_sender.py  event_media_admin_service.py  event_public_service.py  event_registration_service.py  event_tariff_service.py  events_service.py  export_telegram_delivery.py  faq_service.py  file_service.py  kassa_payanyway_fiscal.py  media_admin_service.py  membership_arrears_service.py  notification_service.py  notification_user_context.py  onboarding_service.py  org_doc_admin_service.py  payment_admin_service.py  payment_application_service.py  payment_creation.py  payment_service.py  payment_status_service.py  payment_user_service.py  payment_utils.py  payment_webhook_routing.py  payment_webhook_service.py  portal_user_service.py  (+11 more)
backend/app/services/certificates/: __init__.py  certificate_numbering.py  certificate_pdf.py  certificate_service.py  certificate_storage.py
backend/app/services/doctors/: __init__.py  doctor_admin_read.py  doctor_admin_write.py  doctor_crud_service.py  protocols.py
backend/app/services/event_registration/: __init__.py  constants.py  guest_flow.py  member_flow.py  member_queries.py  payments.py  protocols.py  runtime.py  service.py  tokens.py  user_registrations_list.py
backend/app/services/events/: __init__.py  events_admin_core.py  events_admin_registrations.py  events_service.py  protocols.py
backend/app/services/exports/: __init__.py  active_member.py  arrears_export.py  doctors_export.py  event_registrations_export.py  export_errors.py  limits.py  msk.py  payloads.py  payments_export.py  protocol_history_export.py  subscriptions_export.py  translations.py  xlsx_base.py
backend/app/services/payment_providers/: __init__.py  base.py  moneta_client.py  protocols.py  receipt_items.py  yookassa_client.py
backend/app/services/subscriptions/: __init__.py  protocols.py  subscription_helpers.py  subscription_pay.py  subscription_service.py  subscription_status.py
backend/app/tasks/: __init__.py  certificate_tasks.py  email_tasks.py  payment_webhook_tasks.py  profile_tasks.py  scheduler.py  telegram_tasks.py
backend/scripts/: cities_catalog.py  create_admin.py  db_cleanup_doctors.py  db_full_reset.py  seed_merge_cities.py  seed_organization_documents.py  seed_staff_users.py
backend/scripts/data/: cities_source_lines.txt
backend/tests/: conftest.py  factories.py  test_active_member.py  test_admin_cities.py  test_admin_doctors.py  test_admin_filters.py  test_admin_payments.py  test_arrears_restrictions.py  test_auth.py  test_certificates.py  test_content_blocks.py  test_dashboard.py  test_doctor_events.py  test_doctor_payments.py  test_event_registration.py  test_exports.py  test_health.py  test_kassa_fiscal.py  test_media_admin.py  test_membership_arrears.py  test_moneta_client.py  test_moneta_full_flow.py  test_moneta_integration.py  test_moneta_kassa_webhook.py  test_moneta_webhook.py  test_notification_user_context.py  test_notifications.py  test_onboarding.py  test_payment_application_service.py  test_payment_webhook_matrix.py  test_payments.py  test_profile.py  test_protocol_history.py  test_public.py  test_public_endpoints.py  test_seo_admin.py  test_subscription_pay_moneta.py  test_subscription_reminders.py  test_subscriptions.py  test_telegram.py  (+6 more)
(+209 files in other folders)
