[tool.poetry]
name = "triho-backend"
version = "0.1.0"
description = "Backend API for the Association of Trichologists"
authors = ["triho"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = { version = "0.30.6", extras = ["standard"] }
sqlalchemy = { version = "2.0.35", extras = ["asyncio"] }
asyncpg = "0.29.0"
alembic = "1.13.2"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
redis = { version = "5.1.0", extras = ["hiredis"] }
argon2-cffi = "23.1.0"
python-jose = { version = "3.3.0", extras = ["cryptography"] }
httpx = "0.27.2"
aioboto3 = "13.1.1"
taskiq = ">=0.12.0"
taskiq-redis = ">=1.0.0"
taskiq-fastapi = ">=0.3.2"
structlog = "24.4.0"
pillow = "10.4.0"
openpyxl = "3.1.5"
uuid-utils = "0.9.0"
email-validator = "^2.3.0"
python-multipart = "^0.0.22"
python-dateutil = "^2.9.0.post0"
reportlab = "^4.4.10"
qrcode = {version = "^8.0", extras = ["pil"]}
gunicorn = "^25.1.0"
slowapi = "^0.1.9"
jinja2 = "^3.1.6"
aiosmtplib = "^5.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.9"
mypy = ">=1.11"
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-cov = "^7.1.0"
pytest-xdist = "^3.6.0"
factory-boy = "3.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tool configs
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
# B008: FastAPI uses Depends/Query in function signatures by design
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# TaskIQ @broker.task is not typed; relax decorator checks for task modules only.
[[tool.mypy.overrides]]
module = "app.tasks.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aioboto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qrcode"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.services.certificates.certificate_pdf"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "app.services.payment_webhook_service"
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not integration' --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:httpx.*",
    "ignore::pytest.PytestDeprecationWarning:pytest_asyncio.*",
]
markers = [
    "integration: tests that call real external APIs (skipped by default)",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/alembic/*",
    "*/migrations/*",
]

[tool.coverage.report]
# Current baseline for app/services (~48% total lines). Raise toward 70% (QA plan).
fail_under = 47
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
